--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import HeaderComponent from '../components/Header.astro';
+import FooterComponent from '../components/Footer.astro';
+import '@fontsource-variable/onest';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +14,26 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<div class="absolute top-0 bottom-0 z-[-2] h-full w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(25,45,50,0.1))]"></div>
+		<HeaderComponent />
 		<slot />
+		<FooterComponent/>
 	</body>
 </html>
 
 <style>
-	html,
+	:root {
+	  color-scheme: light dark;
+	}
+	
+	html {
+		font-family: "Onest Variable", system-ui, sans-serif;
+	}
 	body {
 		margin: 0;
-		width: 100%;
-		height: 100%;
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
+		overscroll-behavior: none;
 	}
 </style>
