--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -32,7 +32,7 @@ import LocalPerfilImage from '../assets/perfil.jpeg';
 						<GitHubIcon class="size-6" />
 						GitHub
 					</SocialPill>
-					<SocialPill href="https://github.com/JRodrigoHuacac">
+					<SocialPill href="mailto:jaime.huacac.centeno@gmail.com" target="_blank">
 						<MailIcon class="size-6" />
 						Contáctame
 					</SocialPill>
