--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,8 @@ import '@fontsource-variable/onest';
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+	<!-- <body class="relative text-black dark:text-white"> -->
+	<body class="relative text-white">
 		<div class="absolute top-0 bottom-0 z-[-2] h-full w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(25,45,50,0.1))]"></div>
 		<HeaderComponent />
 		<slot />
